tests/errors/test_43.x
fn foo() -> void {

}

fn bar(a: int) -> int {
    return 0;
}

fn main() -> int {

    foo(2);
    bar();

}